[package]
name = "iracing_broadcast"
version = "0.1.0"
description = "Rust interface for iRacing Broadcast Message API."
authors = ["Justin Makaila <justin@treehousetechnology.io>"]
repository = "https://github.com/racedirector/iracing_broadcast"
edition = "2024"
license = "MIT"
build = false
include = [
  "src/**",
  "README.md",
  "LICENSE"
]
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
readme = "README.md"
keywords = [
    "iracing",
    "broadcast",
    "racing",
    "simulation",
]

[lib]
name = "iracing_broadcast"
path = "src/lib.rs"

[dependencies]
bitflags = "1.2"
thiserror = "2"
winapi = { version = "0.3.9" }

# Optional TypeScript generation support
specta = { version = "2.0.0-rc.22", features = ["derive"], optional = true }

# Windows-specific dependencies (for sending messages to iRacing)
[target.'cfg(windows)'.dependencies]
windows.workspace = true
windows-core.workspace = true

