[package]
name = "iracing-broadcast"
version = "0.1.0"
description = "Rust interface for iRacing Broadcast Message API."
authors = ["Justin Makaila <justin@treehousetechnology.io>"]
repository = "https://github.com/racedirector/iracing-broadcast.rs"
edition = "2024"
license = "MIT"
build = false
include = [
  "src/**",
  "README.md",
  "LICENSE"
]
readme = "README.md"
keywords = [
    "iracing",
    "broadcast",
    "racing",
    "simulation",
]

[dependencies]
bitflags = "2.10"
thiserror = "2"

# Windows-specific dependencies (for sending messages to iRacing)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging"] }
windows-core = "0.62.2"

